install/kube/example-nginx.yaml
# nginx service
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: website-example
  name: website-example
spec:
  selector:
    matchLabels:
      app: website-example
  replicas: 1
  template:
    metadata:
      labels:
        app: website-example
    spec:
      containers:
      - image: nginx
        name: website-example
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: content-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: content-volume
        configMap:
          name: website-example
---
apiVersion: v1
kind: Service
metadata:
  name: website-example
  labels:
    sevice: website-example
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: website-example
---
# virtual service for gloo
apiVersion: gloo.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  routes:
  - request_matcher:
      path_prefix: /
    single_destination:
      upstream:
        name: default-website-example-80
